feat: add practice work

--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guess the Number</title>
+    <style>
+        /* Add your CSS styles here if needed */
+    </style>
 </head>
 <body>
- 
- <script src="./while.js"></script>
+    <h1>Guess the Number</h1>
+    
+    <p>Guessed Number: <span id="guessedNumber"></span></p>
+    <p>Guess Attempts: <span id="guessAttempts">5</span></p>
+    
+    <div>
+        <button onclick="guessNumber(1)">1</button>
+        <button onclick="guessNumber(2)">2</button>
+        <button onclick="guessNumber(3)">3</button>
+        <button onclick="guessNumber(4)">4</button>
+        <button onclick="guessNumber(5)">5</button>
+        <button onclick="guessNumber(6)">6</button>
+        <button onclick="guessNumber(7)">7</button>
+        <button onclick="guessNumber(8)">8</button>
+        <button onclick="guessNumber(9)">9</button>
+        <button onclick="guessNumber(10)">10</button>
+    </div>
+
+ <script src="./guessTheNumber.js"></script>
+</body>
 </html>
